Shout is now ices, and it works

--- a/icecast/trunk/ices0/trunk/src/xml/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/xml/Makefile.am
@@ -2,10 +2,10 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-noinst_LIBRARIES = libshoutxml.a
+noinst_LIBRARIES = libicesxml.a
 noinst_HEADERS = parse.h
 
-libshoutxml_a_SOURCES = parse.c
+libicesxml_a_SOURCES = parse.c
 
 INCLUDES = -I.. 
 
