Changes needed for make dist. And some fixes for systems without libxml

--- a/icecast/trunk/ices0/trunk/src/interpreter/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/interpreter/Makefile.am
@@ -9,5 +9,5 @@ libinterpreter_a_SOURCES = interpreter.c interpreter_playlist.c
 
 INCLUDES = -I.. -I$(top_srcdir)/resolver -I$(top_srcdir)/thread
 
-
+EXTRA_DIST = playlist_python.c python.c
 
