Documentation updated in README and INSTALL Moved from dependency of installed libshout to checking out the libshout module in cwd. Changed autogen and configure to call their neighbours in libshout. Few changes to reencoding and thread modules.

--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = resolver thread src conf doc 
+SUBDIRS = libshout resolver thread src conf doc 
 
 install-data-local:
 	mkdir -p $(DESTDIR)$(ICES_LOGDIR_INST)
