--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -10,9 +10,9 @@ noinst_HEADERS = definitions.h setup.h log.h stream.h util.h playlist.h cue.h dj
 
 ices_SOURCES = log.c setup.c ices.c stream.c util.c playlist.c dj.c mp3.c cue.c id3.c signals.c reencode.c
 
-ices_LDADD = playlist_builtin/libplaylist.a interpreter/libinterpreter.a xml/libicesxml.a $(top_srcdir)/resolver/libresolver.a $(top_srcdir)/thread/libicethread.a $(top_srcdir)/thread/avl/libavl.a -lshout 
+ices_LDADD = playlist_builtin/libplaylist.a interpreter/libinterpreter.a xml/libicesxml.a $(top_srcdir)/resolver/libresolver.a $(top_srcdir)/thread/libicethread.a $(top_srcdir)/thread/avl/libavl.a $(top_srcdir)/libshout/.libs/libshout.a
 
-INCLUDES = -I$(top_srcdir)/resolver -I$(top_srcdir)/thread
+INCLUDES = -I$(top_srcdir)/resolver -I$(top_srcdir)/thread -I$(top_srcdir)/libshout
 
 if FSSTD
 bindir=$(ICES_SBINDIR)
