Removed -ansi and -pedantic from automake for 2 reasons. First, libshout uses long long, which is not ansi, and gcc complains uglily about that. Second, perl seems to have non-ansi compliant headers, which is just plain rude.
Anyway.. we don't really need -ansi, it's just nice to know that our
code is compilable on all ansi c compilers.

--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -19,12 +19,12 @@ else
 	ICES_VERSION=$ICES_VERSION_SMALL.$ICES_SPECIAL
 fi
 
-PACKAGE=ices
+ICES_PACKAGE=ices
 VERSION="$ICES_VERSION"
 
 echo "Building ices-$VERSION..."
 
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
+AM_INIT_AUTOMAKE($ICES_PACKAGE, $VERSION)
 AM_MAINTAINER_MODE
 AM_CONDITIONAL(FSSTD, test x$enable_fsstd = xyes)
 AC_SUBST(USE_FSSTD)
@@ -92,7 +92,7 @@ dnl Checks for programs.
 AC_PROG_CC
 
 if test "$GCC" = yes; then
-	CFLAGS="$CFLAGS -Wall -ansi -pedantic"
+	CFLAGS="$CFLAGS -Wall"
 fi
 
 AC_CHECK_PROG(UNAME,uname,uname)
