--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -8,4 +8,4 @@ install-data-local:
 	mkdir -p $(DESTDIR)$(ICES_LOGDIR_INST)
 	mkdir -p $(DESTDIR)$(ICES_MODULEDIR)
 
-EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED ices.spec
+EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED 
