--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -6,7 +6,7 @@ SUBDIRS = playlist_builtin interpreter xml
 
 bin_PROGRAMS = ices
 
-noinst_HEADERS = definitions.h setup.h log.h stream.h util.h playlist.h cue.h dj.h mp3.h id3.h signals.h reencode.h
+noinst_HEADERS = definitions.h setup.h log.h stream.h util.h playlist.h cue.h dj.h mp3.h id3.h signals.h reencode.h icestypes.h
 
 ices_SOURCES = log.c setup.c ices.c stream.c util.c playlist.c dj.c mp3.c cue.c id3.c signals.c reencode.c
 
