Wow.. Ehm.. automake and libtool fixes for ices and libshout. Make sure you have a new libtool and automake installed. libtool 1.2b will _not_ do. Made some functions in the thread module static. Still hunting down the hang problem on solaris.

--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -29,6 +29,9 @@ AM_MAINTAINER_MODE
 AM_CONDITIONAL(FSSTD, test x$enable_fsstd = xyes)
 AC_SUBST(USE_FSSTD)
 
+AM_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
+
 dnl reasonable guesses for where stuff is installed
 if test "x$prefix" = "xNONE"; then
 	prefix="/usr/local/icecast"
@@ -194,6 +197,15 @@ else
 	  fi
 	done	
   fi	
+
+  AC_CHECK_FUNCS(nanosleep)
+
+  if test "$ac_cv_func_nanosleep" = no; then
+        for lib in rt; do
+                AC_CHECK_LIB($lib, nanosleep,LIBS="$LIBS -l$lib";HAVE_NANOSLEEP=1;AC_DEFINE(HAVE_NANOSLEEP))
+        done
+  fi
+
 
 fi
 
