- Reencoding fixes, commented config file and README.playlist - Changed perl module to use user specified module - ices.py and ices.pm now commented - Configure.in now checks for gmake, and tells user to use this   if found. - ices.pm,ices.py and README.playlist included in dist. - Moved README to README.old and lynx -dump -nolist on   doc/icesmanual.html to the new README. (I don't want to   maintain two sets of documentation) - Started to work on the FAQ

--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -99,6 +99,7 @@ if test "$GCC" = yes; then
 fi
 
 AC_CHECK_PROG(UNAME,uname,uname)
+AC_CHECK_PROG(GMAKE,gmake,gmake)
 AC_PROG_INSTALL
 
 dnl weird ass systems
@@ -416,7 +417,7 @@ else
 	echo "xml-config program not found, compiling without libxml support. (This means no support for configfiles)"
 fi
 
-AC_CHECK_HEADERS(fcntl.h sys/types.h sys/socket.h sys/time.h sys/stat.h unistd.h assert.h sys/resource.h math.h signal.h sys/signal.h errno.h Python.h libxml/parser.h gnome-xml/parser.h)
+AC_CHECK_HEADERS(fcntl.h sys/types.h sys/socket.h sys/time.h sys/stat.h unistd.h assert.h sys/resource.h math.h signal.h sys/signal.h errno.h Python.h libxml/parser.h gnome-xml/parser.h parser.h)
 AC_CHECK_FUNCS(gettimeofday strstr snprintf vsnprintf rename setpgid basename setsockopt umask inet_addr inet_aton inet_ntoa sigaction pthread_sigmask)
 
 AC_OUTPUT([Makefile src/Makefile src/playlist_builtin/Makefile conf/Makefile conf/ices.conf.dist doc/Makefile resolver/Makefile thread/Makefile thread/avl/Makefile src/interpreter/Makefile src/xml/Makefile])
@@ -430,5 +431,11 @@ cd ..
 echo "Compiling with CPPFLAGS=$CPPFLAGS"
 echo "Linking with LDFLAGS=$LDFLAGS $LIBS"
 
+if test "$GMAKE"; then
+echo "Ok, everything seems ok. Now do 'gmake'."
+echo "You can then run 'gmake install' to install as you specified"
+else
 echo "Ok, everything seems ok. Now do 'make'."
-echo "You can then run make install to install as you specified"
+echo "You can then run 'make install' to install as you specified"
+fi
+
