* Added FILES to describe all files relevant to ices. 	I skipped libshout files cause.. well.. it's not my code :) * Changed id3 get/set function interface to be more elegant and more threadsafe * Fixed daemon code and introduced setlinebuf() calls for logfile.

--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -8,4 +8,4 @@ install-data-local:
 	mkdir -p $(DESTDIR)$(ICES_LOGDIR_INST)
 	mkdir -p $(DESTDIR)$(ICES_MODULEDIR)
 
-EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist ices.pm ices.py README.old
+EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist ices.pm ices.py README.old FILES
