--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -38,7 +38,7 @@ else
 	prefix=$prefix
 fi
 
-AC_ARG_ENABLE(fsstd, [  --enable-fsstd	install files following FSSTD [default=no]], , enable_fsstd=no)
+AC_ARG_ENABLE(fsstd, [  --enable-fsstd              install files following FSSTD [default=no]], , enable_fsstd=no)
 
 if test "x$enable_fsstd" = "xyes"; then
 	ICES_BINDIR=/usr/bin
@@ -276,13 +276,13 @@ LIBS="$LIBS $THREADLIBS"
 CPPFLAGS="$CPPFLAGS $THREADCPPFLAGS"
 
 AC_ARG_WITH(lame,
-[  --with-lame[=ARG]	enable support for reencoding using lame [ARG=yes]])
+[  --with-lame                 enable support for reencoding using lame])
 
 AC_ARG_WITH(lame-includes,
-[  --with-lame-includes=DIR Directory to find lame.h])
+[  --with-lame-includes=DIR    directory to find lame.h])
 
 AC_ARG_WITH(lame-libraries,
-[  --with-lame-libraries=DIR Directory to find lame library])
+[  --with-lame-libraries=DIR   directory to find lame library])
 
 if test "$with_lame_includes"; then
 	if test -f "$with_lame_includes/lame.h"; then
@@ -310,13 +310,13 @@ if test "x$with_lame" = "xyes"; then
 fi
 
 AC_ARG_WITH(perl,
-[  --with-perl[=ARG]	      enable support for the perl embedded interpreter [ARG=yes]])
+[  --with-perl                 enable perl interpreter])
 
 AC_ARG_WITH(perl-includes,
-[  --with-perl-includes=DIR Perl include files are in DIR (look for perl.h)])
+[  --with-perl-includes=DIR    perl include files are in DIR (look for perl.h)])
 
 AC_ARG_WITH(perl-libraries,
-[  --with-perl-libraries=DIR Perl libraries are in DIR (look for libperl.a)])
+[  --with-perl-libraries=DIR   perl libraries are in DIR (look for libperl.a)])
 
 if test "$with_perl_includes"; then
 	CPPFLAGS="$CPPFLAGS -I$with_perl_includes"
@@ -348,64 +348,51 @@ fi
 
 
 AC_ARG_WITH(python,
-[  --with-python[=ARG]        enable usage of the python interpreter [ARG=yes]])
+[  --with-python[=DIR]         enable python interpreter [in DIR]])
 
 use_python=$withval
 
 AC_ARG_WITH(python-includes,
-[  --with-python-includes=DIR Python include files are in DIR])
+[  --with-python-includes=DIR  python include files are in DIR])
 AC_ARG_WITH(python-libraries,
-[  --with-python-libraries=DIR Python library file are in DIR])
+[  --with-python-libraries=DIR python libraries are in DIR])
 
-if test "$with_python_includes"; then
-        CPPFLAGS="$CPPFLAGS -I$with_python_includes"
-        if test "x$with_python" = "xyes"; then
-                with_python=yes
-        fi
-elif test "$with_python"; then
-	if test -f "/usr/include/python1.5/Python.h"; then
-		CPPFLAGS="$CPPFLAGS -I/usr/include/python1.5"
-	elif test -f "/usr/include/python1.6/Python.h"; then
-		CPPFLAGS="$CPPFLAGS -I/usr/include/python1.6"
-	elif test -f "/usr/local/include/python1.5/Python.h"; then
-		CPPFLAGS="$CPPFLAGS -I/usr/local/include/python1.5"
-	elif test -f "/usr/local/include/python1.6/Python.h"; then
-		CPPFLAGS="$CPPFLAGS -I/usr/local/include/python1.6"
-	fi
+if test "$with_python_includes"
+then
+  CPPFLAGS="$CPPFLAGS -I$with_python_includes"
 fi
 
-if test "$with_python_libraries"; then
-        LIBS="$LIBS -L$with_python_libraries"
-        if test "$with_python" = ""; then
-                with_python=yes
-        fi
-elif test "$with_python"; then
-	if test -d "/usr/lib/python1.5/config"; then
-		LIBS="$LIBS -L/usr/lib/python1.5/config"
-	elif test -d "/usr/lib/python1.6/config"; then
-		LIBS="$LIBS -L/usr/lib/python1.6/config"
-	elif test -d "/usr/local/lib/python1.5/config"; then
-		LIBS="$LIBS -L/usr/local/lib/python1.5/config"
-	elif test -d "/usr/local/lib/python1.6/config"; then
-		LIBS="$LIBS -L/usr/local/lib/python1.6/config"
-	fi
+if test "$with_python_libraries"
+then
+  LIBS="$LIBS -L$with_python_libraries"
 fi
 
-if test "$with_python"; then
-dnl I can't say for sure what libs we need for python, but this is what my system needs
-AC_CHECK_LIB(dl, dlopen)
-AC_CHECK_LIB(m, log)
-AC_CHECK_FUNCS(Py_Initialize)
-	if test "$ac_cv_func_Py_Initialize" = no; then
-		for lib in python python1.5 python1.6; do
-			if test "$HAVE_LIBPYTHON" != 1; then
-				AC_CHECK_LIB($lib, Py_Initialize,LIBS="$LIBS -l$lib";HAVE_LIBPYTHON=1;AC_DEFINE(HAVE_LIBPYTHON))
-			fi
-		done
-	fi
+if test "$with_python" != "no"
+then
+  if test "$with_python" != "yes"
+  then
+    CPPFLAGS="$CPPFLAGS -I$with_python"
+    LDFLAGS="$LDFLAGS -L$with_python"
+  fi
+
+  dnl I can't say for sure what libs we need for python, but this is what my
+  dnl system needs
+  AC_CHECK_LIB(dl, dlopen)
+  AC_CHECK_LIB(m, log)
+
+  for lib in python python2.0 python1.6 python1.5
+  do
+    if test "$HAVE_LIBPYTHON" != 1
+    then
+      AC_CHECK_LIB($lib, Py_Initialize, [
+        LIBS="$LIBS -l$lib"
+        HAVE_LIBPYTHON=1
+        AC_DEFINE(HAVE_LIBPYTHON)])
+    fi
+  done
 fi
 
-AC_CHECK_PROG(XMLCONFIG,xml-config,xml-config)
+AC_CHECK_PROGS(XMLCONFIG, [xml2-config xml-config])
 
 if test "$XMLCONFIG"; then
 	HAVE_LIBXML=1
