--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -32,10 +32,9 @@ AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 dnl reasonable guesses for where stuff is installed
-if test "x$prefix" = "xNONE"; then
-	prefix="/usr/local/icecast"
-else
-	prefix=$prefix
+if test "$prefix" = "NONE"
+then
+  prefix="/usr/local/icecast"
 fi
 
 AC_ARG_ENABLE(fsstd, [  --enable-fsstd              install files following FSSTD [default=no]], , enable_fsstd=no)
@@ -79,7 +78,6 @@ AC_SUBST(ICES_ETCDIR_INST)
 AC_SUBST(ICES_LOGDIR_INST)
 AC_SUBST(ICES_DOCDIR)
 
-
 AC_DEFINE_UNQUOTED(ICES_ETCDIR, "$ICES_ETCDIR")
 AC_SUBST(ICES_ETCDIR)
 AC_DEFINE_UNQUOTED(ICES_LOGDIR, "$ICES_LOGDIR")
@@ -111,10 +109,9 @@ system=`$UNAME`
 IRIX=no
 case $system in
 	Linux)
-		LINUX=1
 		AC_DEFINE(LINUX)
 		AC_MSG_RESULT(Linux)
-		;;
+	;;
 	SunOS)
 		if test x`uname -r | cut -d . -f 1` = "x5"; then
 			SYSV=1
@@ -130,7 +127,7 @@ case $system in
 		if test "$CC" = cc; then
 			CFLAGS="$CFLAGS -mt"
 		fi
-		;;
+	;;
 	HP-UX)
 		hpux=1
 		AC_DEFINE(hpux)
@@ -139,12 +136,12 @@ case $system in
 		if test "$CC" = cc; then
 			CFLAGS="$CFLAGS -Aa"
 		fi
-		;;
+	;;
 	IRIX)
 		IRIX=yes
 		AC_DEFINE(IRIX)
 		AC_MSG_RESULT(IRIX)
-		;;
+	;;
 	*BSD*)
 		__SOMEBSD__=yes
 		AC_DEFINE(__SOMEBSD__)
@@ -157,10 +154,10 @@ case $system in
 	       		       ,
 			       	CPPFLAGS="$OLDCPPFLAGS")
 		CPPFLAGS=$OLDCPPFLAGS
-		;;
+	;;
 	*)
 		AC_MSG_RESULT($system)
-		;;
+	;;
 esac
 
 if test ${IRIX} = yes; then
@@ -276,7 +273,7 @@ LIBS="$LIBS $THREADLIBS"
 CPPFLAGS="$CPPFLAGS $THREADCPPFLAGS"
 
 AC_ARG_WITH(lame,
-[  --with-lame                 enable support for reencoding using lame])
+[  --with-lame[=DIR]           enable support for reencoding with lame [in DIR]])
 
 AC_ARG_WITH(lame-includes,
 [  --with-lame-includes=DIR    directory to find lame.h])
@@ -284,29 +281,48 @@ AC_ARG_WITH(lame-includes,
 AC_ARG_WITH(lame-libraries,
 [  --with-lame-libraries=DIR   directory to find lame library])
 
-if test "$with_lame_includes"; then
-	if test -f "$with_lame_includes/lame.h"; then
-		CPPFLAGS="$CPPFLAGS -I$with_lame_includes"
-	else
-		AC_MSG_ERROR("lame.h is not where you told me it should be. No that is just plain rude.")
-	fi
-		
+if test "$with_lame_includes"
+then
+  if test -f "$with_lame_includes/lame.h"
+  then
+    CPPFLAGS="$CPPFLAGS -I$with_lame_includes"
+  else
+    AC_MSG_ERROR("lame.h is not where you told me it should be. No that is just plain rude.")
+  fi
 fi
 
-if test "$with_lame_libraries"; then
-	LIBS="$LIBS -L$with_lame_libraries"
+if test "$with_lame_libraries"
+then
+  LIBS="$LIBS -L$with_lame_libraries"
 fi
 
-if test "x$with_lame" = "xyes"; then
-	AC_CHECK_LIB(m, log)
-	AC_CHECK_FUNCS(lame_decode)
-        if test "$ac_cv_func_lame_decode" = no; then
-                for lib in mp3lame; do
-                        if test "$HAVE_LIBLAME" != 1; then
-                                AC_CHECK_LIB($lib, lame_decode,LIBS="$LIBS -l$lib";HAVE_LIBLAME=1;AC_DEFINE(HAVE_LIBLAME))
-                        fi
-                done
-        fi
+if test "$with_lame" != "no"
+then
+  AC_CACHE_SAVE
+  if test "$with_lame" != "yes"
+  then
+    CPPFLAGS="$CPPFLAGS -I$with_lame"
+    LDFLAGS="$LDFLAGS -L$with_lame"
+  fi
+  have_LAME="no"
+  AC_CHECK_HEADER(lame/lame.h, [
+    have_LAME="maybe",
+    AC_DEFINE(HAVE_LAME_LAME_H, 1, [ Use <lame/lame.h> instead of <lame.h> ])
+    ],
+    AC_CHECK_HEADER(lame.h, [
+      have_LAME="maybe"]))
+  if test "$have_LAME" != "no"
+  then
+    AC_CHECK_LIB(mp3lame, lame_init, [
+      have_LAME="yes"
+      LIBS="$LIBS -lmp3lame"
+      AC_DEFINE(HAVE_LIBLAME)
+      ],, -lm)
+  fi
+  if test "$have_LAME" != "yes"
+  then
+    AC_MSG_ERROR([Could not find a valid LAME library installation])
+  fi
 fi
 
 AC_ARG_WITH(perl,
@@ -422,4 +438,3 @@ else
 echo "Ok, everything seems ok. Now do 'make'."
 echo "You can then run 'make install' to install as you specified"
 fi
-
