Sunday in the park with autoconf (not as picturesque as it sounds) Also not finished yet <sigh>
Among numerous cleanups in configure.in, I also introduced backward
compatibility to lame 3.88beta (the last release). Also made configure
notice if we don't have at least that version, and disable reencoding.

Made reencode.c not get linked in if lame isn't used. Bracketing the
whole file in #ifdef HAVE_LIBLAME was kind of cheezy. Also removed a
bunch of useless functions.

I hope I didn't break the perl stuff, but it was insanely messy.

src/id3.c:
	the metadata update delay was causing the main thread to sleep,
	not the update thread (somewhat counterproductive) - fixed.
	Metadata is now correct for the first song, yay!
TESTED:
	Removed configurations using old LAME, they wouldn't work now.
INSTALL:
	Updated instructions based on my autoconf frobbing
README:
	Advise user she needs at least LAME 3.88beta.

--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -6,16 +6,23 @@ SUBDIRS = playlist_builtin interpreter xml
 
 bin_PROGRAMS = ices
 
-noinst_HEADERS = definitions.h setup.h log.h stream.h util.h playlist.h cue.h dj.h mp3.h id3.h signals.h reencode.h icestypes.h
+noinst_HEADERS = definitions.h setup.h log.h stream.h util.h playlist.h cue.h \
+	dj.h mp3.h id3.h signals.h reencode.h icestypes.h
 
-ices_SOURCES = log.c setup.c ices.c stream.c util.c playlist.c dj.c mp3.c cue.c id3.c signals.c reencode.c
+ices_SOURCES = log.c setup.c ices.c stream.c util.c playlist.c dj.c mp3.c cue.c \
+	id3.c signals.c
 
-ices_LDADD = playlist_builtin/libplaylist.a interpreter/libinterpreter.a \
-	xml/libicesxml.a ../resolver/libresolver.a  ../thread/libicethread.a \
-	../avl/libiceavl.a ../log/libicelog.a ../libshout/libices.la
+ices_LDADD = @ICES_OBJECTS@ playlist_builtin/libplaylist.a \
+	interpreter/libinterpreter.a xml/libicesxml.a ../resolver/libresolver.a \
+	../thread/libicethread.a ../avl/libiceavl.a ../log/libicelog.a \
+	../libshout/libices.la
+
+ices_DEPENDENCIES = @ICES_OBJECTS@
 
 INCLUDES = -I$(top_srcdir)/resolver -I$(top_srcdir)/thread \
 	-I$(top_srcdir)/libshout
+
+EXTRA_ices_SOURCES = reencode.c
 
 if FSSTD
 bindir=$(ICES_SBINDIR)
