--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -299,11 +299,12 @@ fi
 if test "$with_lame" != "no"
 then
   AC_CACHE_SAVE
-  if test "$with_lame" != "yes"
+  if test -n "$with_lame" -a "$with_lame" != "yes"
   then
-    CPPFLAGS="$CPPFLAGS -I$with_lame"
-    LDFLAGS="$LDFLAGS -L$with_lame"
+    CPPFLAGS="$CPPFLAGS -I$with_lame/include"
+    LDFLAGS="$LDFLAGS -L$with_lame/lib"
   fi
+
   have_LAME="no"
   AC_CHECK_HEADER(lame/lame.h, [
     have_LAME="maybe",
@@ -311,17 +312,37 @@ then
     ],
     AC_CHECK_HEADER(lame.h, [
       have_LAME="maybe"]))
+
   if test "$have_LAME" != "no"
   then
-    AC_CHECK_LIB(mp3lame, lame_init, [
+    dnl lame_init_old only exists in the NEW API - we don't actually use it.
+    AC_CHECK_LIB(mp3lame, lame_init_old, [
       have_LAME="yes"
       LIBS="$LIBS -lmp3lame"
-      AC_DEFINE(HAVE_LIBLAME)
+      ICES_OBJECTS="$ICES_OBJECTS reencode.o"
+      LIBM="-lm"
+      AC_DEFINE(HAVE_LIBLAME, 1, [ Define if you have the LAME MP3 library ])
       ],, -lm)
   fi
-  if test "$have_LAME" != "yes"
+
+  dnl lame_encode_flush_nogap was added at the same time that lame was made
+  dnl to handle calls to lame_encode_buffer following a flush, so we use
+  dnl this as a flag to see whether we have to reset the LAME engine between
+  dnl songs.
+  if test "$have_LAME" = "yes"
+  then
+  AC_CHECK_LIB(mp3lame, lame_encode_flush_nogap, [
+    AC_DEFINE(HAVE_LAME_NOGAP, 1, [ Define if libmp3lame has lame_encode_flush_nogap ])],, -lm)
+  fi
+fi
+
+if test "$with_lame" != "no" -a "$have_LAME" != "yes"
+then
+  if test -n "$with_lame"
   then
     AC_MSG_ERROR([Could not find a valid LAME library installation])
+  else
+    AC_MSG_WARN([Could not find a valid LAME library, reencoding disabled])
   fi
 fi
 
@@ -334,34 +355,41 @@ AC_ARG_WITH(perl-includes,
 AC_ARG_WITH(perl-libraries,
 [  --with-perl-libraries=DIR   perl libraries are in DIR (look for libperl.a)])
 
-if test "$with_perl_includes"; then
-	CPPFLAGS="$CPPFLAGS -I$with_perl_includes"
-elif test "$with_perl"; then
-	COREDIR=`perl -MConfig -e 'print $Config{archlib}'`/CORE
-	EMBEDFLAGS=`perl -MExtUtils::Embed -e ccopts`  
-	CPPFLAGS="${CPPFLAGS} -I${COREDIR} ${EMBEDFLAGS} ${EXTRAFLAGS}"
+if test -n "$with_perl_includes"
+then
+  CPPFLAGS="$CPPFLAGS -I$with_perl_includes"
 fi
 
-if test "$with_perl_libraries"; then
-	LIBS="$LIBS -L$with_perl_libraries"
-elif test "$with_perl"; then
-	COREDIR=`perl -MConfig -e 'print $Config{archlib}'`/CORE
-	EMBEDFLAGS=`perl -MExtUtils::Embed -e ldopts`  
-	LIBS="$LIBS -L$COREDIR $EXTRALIBS $EMBEDFLAGS"
+if test "$with_perl_libraries"
+then
+  LDFLAGS="$LDFLAGS -L$with_perl_libraries"
 fi
 
-if test "$with_perl"; then
-dnl I can't say for sure what libs we need for perl, let's hope this works
-AC_CHECK_LIB(dl, dlopen)
-AC_CHECK_FUNCS(perl_construct)
-        if test "$ac_cv_func_perl_construct" != no; then
-			HAVE_LIBPERL=1
-			AC_DEFINE(HAVE_LIBPERL)
-	else
-		echo "You requested perl support, but there was a problem with your perl libraries."
-        fi
+if test "$with_perl" != "no"
+then
+  PERLCFLAGS=`perl -MExtUtils::Embed -e ccopts`
+  PERLLIBS=`perl -MExtUtils::Embed -e ldopts`
+  CPPFLAGS="$CPPFLAGS $PERLCFLAGS"
+  LIBS="$LIBS $PERLLIBS"
+
+  have_perl="no"
+  AC_CHECK_FUNCS(perl_construct)
+  if test "$ac_cv_func_perl_construct" != "no"
+  then
+    have_perl="yes"
+    AC_DEFINE(HAVE_LIBPERL, 1, [ Define if you have perl libraries ])
+  fi
 fi
 
+if test "$with_perl" != "no" -a "$have_perl" != "yes"
+then
+  if test -n "$with_perl"
+  then
+    AC_MSG_ERROR([Could not find your perl libraries])
+  else
+    AC_MSG_WARN([Could not find your perl libraries, perl scripting disabled])
+  fi
+fi
 
 AC_ARG_WITH(python,
 [  --with-python[=DIR]         enable python interpreter [in DIR]])
@@ -373,60 +401,80 @@ AC_ARG_WITH(python-includes,
 AC_ARG_WITH(python-libraries,
 [  --with-python-libraries=DIR python libraries are in DIR])
 
-if test "$with_python_includes"
+if test -n "$with_python_includes"
 then
   CPPFLAGS="$CPPFLAGS -I$with_python_includes"
 fi
 
-if test "$with_python_libraries"
+if test -n "$with_python_libraries"
 then
-  LIBS="$LIBS -L$with_python_libraries"
+  LDFLAGS="$LDFLAGS -L$with_python_libraries"
 fi
 
 if test "$with_python" != "no"
 then
-  if test "$with_python" != "yes"
+  AC_CACHE_SAVE
+  if test -n "$with_python" -a "$with_python" != "yes"
   then
-    CPPFLAGS="$CPPFLAGS -I$with_python"
-    LDFLAGS="$LDFLAGS -L$with_python"
+    CPPFLAGS="$CPPFLAGS -I$with_python/include"
+    LDFLAGS="$LDFLAGS -L$with_python/lib"
   fi
 
-  dnl I can't say for sure what libs we need for python, but this is what my
-  dnl system needs
-  AC_CHECK_LIB(dl, dlopen)
-  AC_CHECK_LIB(m, log)
+  have_python="no"
+  AC_CHECK_HEADER(Python.h, [
+    have_python="maybe",
+    AC_DEFINE(HAVE_PYTHON_H, 1, [ Define if you have Python.h ])])
 
-  for lib in python python2.0 python1.6 python1.5
-  do
-    if test "$HAVE_LIBPYTHON" != 1
-    then
-      AC_CHECK_LIB($lib, Py_Initialize, [
-        LIBS="$LIBS -l$lib"
-        HAVE_LIBPYTHON=1
-        AC_DEFINE(HAVE_LIBPYTHON)])
-    fi
-  done
+  if test "$have_python" != "no"
+  then
+    for lib in python python2.0 python1.6 python1.5
+    do
+      if test "$have_python" != "yes"
+      then
+        AC_CHECK_LIB($lib, Py_Initialize, [
+          LIBS="$LIBS -l$lib"
+          have_python="yes"
+          LIBM="-lm"
+          LIBDL="-ldl"
+          AC_DEFINE(HAVE_LIBPYTHON, 1, [ Define if you have the python library ])],,-lm -ldl)
+      fi
+    done
+  fi
+fi
+
+if test "$with_python" != "no" -a "$have_python" != "yes"
+then
+  if test -n "$with_python"
+  then
+    AC_MSG_ERROR([Could not find the python library])
+  else
+    AC_MSG_WARN([Could not find the python library, python scripting disabled])
+  fi
 fi
 
 AC_CHECK_PROGS(XMLCONFIG, [xml2-config xml-config])
 
 if test "$XMLCONFIG"; then
-	HAVE_LIBXML=1
-	AC_DEFINE(HAVE_LIBXML)
-	LDFLAGS="$LDFLAGS `$XMLCONFIG --libs`"
-	CPPFLAGS="$CPPFLAGS `$XMLCONFIG --cflags`"
+  AC_DEFINE(HAVE_LIBXML, 1, [ Define if you have the GNOME XML library ])
+  LIBS="$LIBS `$XMLCONFIG --libs`"
+  CPPFLAGS="$CPPFLAGS `$XMLCONFIG --cflags`"
 else
-	echo "xml-config program not found, compiling without libxml support. (This means no support for configfiles)"
+  AC_MSG_WARN([Compiling without libxml support. (This means no support for configfiles)])
 fi
 
-AC_CHECK_HEADERS(fcntl.h sys/types.h sys/socket.h sys/time.h sys/stat.h unistd.h assert.h sys/resource.h math.h signal.h sys/signal.h errno.h Python.h libxml/parser.h gnome-xml/parser.h parser.h)
-AC_CHECK_FUNCS(gettimeofday strstr snprintf vsnprintf rename setpgid basename setsockopt umask inet_addr inet_aton inet_ntoa sigaction pthread_sigmask setlinebuf)
+AC_CHECK_HEADERS([fcntl.h sys/types.h sys/socket.h sys/time.h sys/stat.h \
+  unistd.h assert.h sys/resource.h math.h signal.h sys/signal.h errno.h \
+  libxml/parser.h gnome-xml/parser.h parser.h])
+AC_CHECK_FUNCS([gettimeofday strstr snprintf vsnprintf rename setpgid basename \
+  setsockopt umask inet_addr inet_aton inet_ntoa sigaction pthread_sigmask \
+  setlinebuf])
 
-AC_OUTPUT([Makefile src/Makefile src/playlist_builtin/Makefile
-	conf/Makefile conf/ices.conf.dist doc/Makefile resolver/Makefile
-	thread/Makefile avl/Makefile log/Makefile src/interpreter/Makefile
-	src/xml/Makefile])
+LIBS="$LIBS $LIBM $LIBDL"
+AC_SUBST(ICES_OBJECTS)
 
+AC_OUTPUT([Makefile src/Makefile src/playlist_builtin/Makefile conf/Makefile 
+  conf/ices.conf.dist doc/Makefile resolver/Makefile thread/Makefile
+  avl/Makefile log/Makefile src/interpreter/Makefile src/xml/Makefile])
 
 echo "Compiling with CPPFLAGS=$CPPFLAGS"
 echo "Linking with LDFLAGS=$LDFLAGS $LIBS"
