Makefile.am: cosmetic src/util.c: Why was file time being done in double-precision? Silly... src/util.h: Use unsigned in ices_util_file_time for bitrate, file size

--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -9,13 +9,13 @@ bin_PROGRAMS = ices
 noinst_HEADERS = definitions.h setup.h log.h stream.h util.h playlist.h cue.h \
 	dj.h mp3.h id3.h signals.h reencode.h icestypes.h
 
-ices_SOURCES = log.c setup.c ices.c stream.c util.c playlist.c dj.c mp3.c cue.c \
-	id3.c signals.c
+ices_SOURCES = log.c setup.c ices.c stream.c util.c playlist.c dj.c mp3.c \
+	cue.c id3.c signals.c
 
 ices_LDADD = @ICES_OBJECTS@ playlist_builtin/libplaylist.a \
-	interpreter/libinterpreter.a xml/libicesxml.a ../resolver/libresolver.a \
-	../thread/libicethread.a ../avl/libiceavl.a ../log/libicelog.a \
-	../libshout/libices.la
+	interpreter/libinterpreter.a xml/libicesxml.a \
+	../resolver/libresolver.a ../thread/libicethread.a ../avl/libiceavl.a \
+	../log/libicelog.a ../libshout/libices.la
 
 ices_DEPENDENCIES = @ICES_OBJECTS@
 
