Renamed Base_Directory to BaseDirectory: studlyCaps or under_lining   is allowed, but not both together.
Made BaseDirectory actually work. It's a little dirty, I'll clean it up
next version (well, it isn't _that_ dirty).

--- a/icecast/trunk/ices0/trunk/conf/ices.conf.dist.in
+++ b/icecast/trunk/ices0/trunk/conf/ices.conf.dist.in
@@ -50,7 +50,7 @@
 		<!-- This directory specifies where ices should put
 		     the logfile, internal playlist (if randomizing),
 		     cue file and pid file (if daemonizing). -->
-		<ices:Base_Directory>/tmp</ices:Base_Directory>
+		<ices:BaseDirectory>/tmp</ices:BaseDirectory>
 
 		<!-- If this is set to 1, and ices is compiled with
 		     liblame support, ices will reencode the stream
