--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -3,12 +3,12 @@ AM_CONFIG_HEADER(config.h)
 
 ICES_MAJOR=0
 ICES_MINOR=0
-ICES_MICRO=1
+ICES_MICRO=2
 
 dnl Check to see if ICES_SPECIAL is overridden on commandline
 if test -z "$ICES_SPECIAL"
 then
-  ICES_SPECIAL=beta5
+  ICES_SPECIAL=""
 fi
 
 ICES_VERSION_SMALL=$ICES_MAJOR.$ICES_MINOR.$ICES_MICRO
